# Admixture-and-selection

./: .gitignore  README.md
Scripts/R_scripts/: 10000Sims9ModPap1.2_MODINDEX.txt  analyse_discretisation.Rmd  fortes_lima_data_abc_rf.Rmd  test_link_cpp_R.Rmd
Scripts/distribution_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  distribution_cpp
Scripts/distribution_cpp/include/: Admixture.hpp  MakeSim.hpp  Simulation.hpp  Vecteur.hpp  generate_params.py
Scripts/distribution_cpp/src/: main.cpp
